# syntonnetz

./: pyproject.toml
site/: index.html  make_layout.py
src/synthoor/: config.py  sound.py
src/tests/: test_utils.py
